--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,9 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+# Local Config Files
+src/config/config.yml
+
+# Proto
+**/*.proto
